--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,321 @@
+/************************************************
+*
+*   Main Stylesheet
+*   @version (1.0)
+*   @date (2023)
+*
+*   1.) GENERAL ______________________ @general
+*   2.) HEADER _______________________ @header
+*   3.) CONTENT ______________________ @content
+*   4.) FOOTER _______________________ @footer
+*
+************************************************/
+  
+/************************************************
+   GENERAL                              @general
+
+   The base styles for the page, text
+   and links. Includes utility class styles
+************************************************/
+:root {
+    --bg-color-one: #53dd6c;
+    --bg-color-two: #63a088;
+    --bg-color-three: #2a607c;
+    --bg-color-four: #56638a;
+    --bg-color-five: #56203d;
+}
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+p {
+    font-size: 16px;
+}
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+.back-drop {
+    opacity: 0;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.back-drop.closed {
+    opacity: 0;  
+    -webkit-animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;  
+    -moz-animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;
+    animation: fadeOut 0.5s ease-out 0s 0.7 normal backwards;
+}
+.back-drop.active {
+    opacity: 0.7;
+    background-color: var(--bg-color-five);
+    -webkit-animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;  
+    -moz-animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;
+    animation: fadeIn 0.25s ease-in 0s 0.7 normal forwards;
+    z-index: 9999;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/************************************************
+   HEADER                                @header
+
+   The styles for the header which
+   includes a title, an image and a 
+   horizontal menu (desktop and mobile)
+************************************************/
+.header {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: var(--bg-color-three);
+    color: #ffffff;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 3em;
+    z-index: 999999;
+}
+.header-title {
+    font-family: Verdana, sans-serif;
+    font-weight: normal;
+    display: inline-block;
+    font-size: 48px;
+    padding: 1.56em 20px;
+}
+.header nav.desktop-menu {
+    display: none;
+}
+.header nav.mobile-menu {
+    display: block;
+    margin-right: 20px;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    padding: 0.5em;
+    background-color: var(--bg-color-one);
+    border-bottom: 1px solid var(--bg-color-one);
+}
+.header nav.mobile-menu ul {
+    list-style-type: none;
+    position: absolute;
+    right: 0;
+    top: 2.4em;
+    background-color: #f9f9f9;
+    width: 100%;
+    height: 0px;
+    text-align: center;
+    z-index: 1;
+    height: 0px;
+}
+.header nav.mobile-menu ul.active {
+    height: 11em;
+    transition: height .3s ease;
+}
+.header nav.mobile-menu ul.inactive {
+    height: 0px;
+    transition: height .3s ease;
+    overflow: hidden;
+}
+.header nav.mobile-menu ul li {
+    display: block;
+    margin-left: 25px;
+    padding: 0.25em;
+}
+.header nav ul li a {
+    display: inline-block;
+    text-decoration: none;
+    color: #191919;
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 0.5em;
+}
+.header nav.mobile-menu ul li a {
+    color: transparent;
+    background-color: transparent;
+    transition: color 3s ease, background-color 3s ease;
+}
+.header nav ul li a.active {
+    color: var(--bg-color-four);
+}
+.header nav ul li a.active::after {
+    position: absolute;
+    height: 2px;
+    background-color: var(--bg-color-four);
+    width: 100%;
+    left: 50%;
+    bottom: 0;
+}
+.header nav.mobile-menu ul.active li a {
+    color: #191919;
+}
+.header nav.mobile-menu ul.inactive li a {
+    color: transparent;
+}
+.menu-bar {
+    width: 35px;
+    height: 5px;
+    background-color: var(--bg-color-five);
+    margin: 6px 0;
+    transition: all 0.5s;
+    transform-origin: right;
+}
+#menu-btn {
+    position: absolute;
+    right: 14px;
+    top: 5px;
+    height: 2em;
+    width: 3em;
+}
+#menu-btn .bar-one {
+    position: absolute;
+    right: 0.5em;
+    top: 0;
+}
+#menu-btn .bar-two {
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+#menu-btn .bar-three {
+    position: absolute;
+    right: 0.5em;
+    top: 1em;
+}
+#menu-btn.active .bar-one {
+    transform: rotate(-45deg);
+}
+#menu-btn.active .bar-two {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.5s linear;
+}
+#menu-btn.active .bar-three {
+    transform: rotate(45deg);
+    top: 1.2em;
+}
+@media (min-width: 600px) {
+    .header nav.desktop-menu {
+        display: block;
+    }
+    .header nav.mobile-menu {
+        display: none;
+    }
+    .header nav.desktop-menu {
+        height: 100%;
+        margin-right: 20px;
+        width: 100%;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 20px;
+        background-color: var(--bg-color-one);
+        border-bottom: 1px solid var(--bg-color-two);
+    }
+    .header nav.desktop-menu ul li {
+        display: inline-block;
+        margin-left: 25px;
+    }
+    .header nav.mobile-menu ul li {
+        display: none;
+    }
+    #menu-btn {
+        display: none;
+    }
+}
+/************************************************
+   The following animation was 
+   borrowed from: 
+   https://codepen.io/sharkcoder/pen/oNLoddx 
+   (@sharkcoder) 
+*************************************************/
+.header nav ul li a::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    background-color: var(--bg-color-four);
+    width: 0;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) all;
+}
+.header nav ul li a:hover {
+    color: var(--bg-color-four);
+}
+.header nav ul li a:hover::after {
+    width: 100%;
+}
+/*************************
+    end animation css 
+*************************/
+.hero {
+    height: 13em;
+    width: 100%;
+    margin-top: 3em;
+    background-color: var(--bg-color-four);
+}
+.hero .emphasis {
+    padding: 30px 0 8px;
+    position: relative;
+}
+.hero .emphasis::before {
+    content: "";
+    position: absolute;
+    left: 2%;
+    bottom: 9px;
+    width: 5.15em;
+    height: 5px;
+    background: var(--bg-color-one);
+    z-index: 2;
+}
+
+/************************************************
+   CONTENT                               @content
+
+   The styles for the content section
+************************************************/
+.content {
+    height: -moz-calc(100vh - 19em);
+    height: -webkit-calc(100vh - 19em);
+    height: calc(100vh - 19em);
+    padding: 1em;
+}
+
+/************************************************
+   FOOTER                                 @footer
+
+   The styles for the footer
+************************************************/
+.footer {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    height: 3em;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: var(--bg-color-one);
+}
+.footer h3 {
+    font-size: 18px;
+    margin-top: 12px;
 }
