--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,9 @@ html,
 body {
     height: 100%;
     width: 100%;
-    position: relative;
-    overflow: hidden;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 a {
     color: #ffffff;
@@ -84,10 +85,10 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: var(--bg-color-three);
     color: #ffffff;
-    position: fixed;
-    top: 0;
     width: 100%;
     height: 3em;
+    position: fixed;
+    top: 0;
     z-index: 999999;
 }
 .header-title {
@@ -147,6 +148,7 @@ p {
     text-transform: uppercase;
     position: relative;
     padding: 0.5em;
+    cursor: pointer;
 }
 .header nav.mobile-menu ul li a {
     color: transparent;
@@ -271,7 +273,6 @@ p {
 .hero {
     height: 13em;
     width: 100%;
-    margin-top: 3em;
     background-color: var(--bg-color-four);
 }
 .hero .emphasis {
@@ -295,10 +296,16 @@ p {
    The styles for the content section
 ************************************************/
 .content {
-    height: -moz-calc(100vh - 19em);
-    height: -webkit-calc(100vh - 19em);
-    height: calc(100vh - 19em);
+    flex-grow: 1;
+    overflow: auto;
+    margin-top: 3em;
+}
+.temp-box {
+    background-color: lightgray;
     padding: 1em;
+    height:100vh;
+    width:100vw;
+    margin-bottom: 1em;
 }
 
 /************************************************
@@ -310,8 +317,6 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     height: 3em;
-    position: fixed;
-    bottom: 0;
     width: 100%;
     background-color: var(--bg-color-one);
 }
