Added placeholder cards in the work section

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,6 +7,10 @@
 *   1.) GENERAL ______________________ @general
 *   2.) HEADER _______________________ @header
 *   3.) CONTENT ______________________ @content
+*   4.) ABOUT ME _____________________ @aboutMe
+*   5.) WORK _________________________ @work
+*   6.) CONTACT ME ___________________ @contactMe
+*   7.) RESUME _______________________ @resume
 *   4.) FOOTER _______________________ @footer
 *
 ************************************************/
@@ -201,9 +205,9 @@ p {
 }
 #menu-btn {
     position: absolute;
-    right: 14px;
-    top: 5px;
-    height: 2em;
+    right: 1em;
+    top: 0px;
+    height: 3em;
     width: 3em;
 }
 #menu-btn .bar-one {
@@ -214,7 +218,7 @@ p {
 #menu-btn .bar-two {
     position: absolute;
     right: 0.5em;
-    top: 0.5em;
+    top: 0.75em;
     visibility: visible;
     opacity: 1;
     transition: visibility 0s, opacity 0.5s linear;
@@ -222,7 +226,7 @@ p {
 #menu-btn .bar-three {
     position: absolute;
     right: 0.5em;
-    top: 1em;
+    top: 1.5em;
 }
 #menu-btn.active .bar-one {
     transform: rotate(-45deg);
@@ -334,9 +338,52 @@ p {
     margin-top: 3em;
 }
 .content-section {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+}
+
+.content-section .tag {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: inline-block;
+    padding: 0.2em 0.5em 0.3em;
+    border-radius: 5px;
+    color: #191919;
+    font-weight: 600;
+    margin: 0.5em 0.1em;
+    background-color: #85cb6f;
+}
+.content-section .tag-sm {
+    font-size: .7em;
+    display: inline-block;
+    letter-spacing: .15ch;
+    font-weight: 400
+}
+
+.content-section .content-title {
+    width: 100%;
+    padding: 1em 0.25em 0.25em 0.25em;
+    display: block;
+}
+.content-section .main-content {
+    flex: 1;
     padding: 1em;
-    height:100vh;
-    width:100vw;
+    width: 100%;
+}
+.content-section h2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: normal;
+    padding-bottom: 1em;
+}
+.content-section h2:before {
+    content: "{";
+    font-size: 42px;
+    padding-right: 0.5em;
+}
+.content-section h2:after {
+    content: "}";
+    font-size: 42px;
+    padding-left: 0.5em;
 }
 .content-section.one {
     background-color: var(--bg-color-three);
@@ -352,6 +399,71 @@ p {
 }
 
 /************************************************
+   ABOUT ME                              @aboutMe
+
+   The styles for the about me section
+************************************************/
+
+/************************************************
+   WORK                                     @work
+
+   The styles for the work section
+************************************************/
+.card-list { 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 20px;
+}
+.card-list article {
+    border: 5px solid #a7e794;
+    background-color: #a8e794;
+}
+.card-list article a {
+    position: relative;
+}
+.card-list article img {
+    max-width: 100%;
+}
+.card-list article:nth-child(1) {
+    grid-column: span 2;
+}
+.content-txt {
+    padding: 0.5em;
+}
+.content-txt,
+.content-txt h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: normal;
+}
+.content-txt p,
+.content-txt h3 {
+    padding-bottom: 0.5em;
+}
+.content-txt .card-btn {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: inline-block;
+    padding: 0.5em;
+    border-radius: 5px;
+    color: lightgray;
+    font-weight: normal;
+    font-size: 16px;
+    margin: 0.5em 0.1em;
+    background-color: #191919;
+    border: none;
+}
+/************************************************
+   CONTACT ME                          @contactMe
+
+   The styles for the contact me section
+************************************************/
+
+/************************************************
+   RESUME                                 @resume
+
+   The styles for the resume section
+************************************************/
+
+/************************************************
    FOOTER                                 @footer
 
    The styles for the footer
@@ -364,7 +476,7 @@ p {
     display: table;
     padding: 0.5em;
 }
-.footer h3 {
+.footer h4 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
     font-weight: normal;
