Refactored file structure, made cards a component, made desktop/mobile menu a component

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -450,6 +450,7 @@ p {
     margin: 0.5em 0.1em;
     background-color: #191919;
     border: none;
+    cursor: pointer;
 }
 /************************************************
    CONTACT ME                          @contactMe
