--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -363,7 +363,10 @@ p {
     width: 100%;
     display: flex;
 }
-
+.content-section .tag-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 .content-section .tag {
     font-family: var(--font-main-style);
     display: inline-block;
@@ -373,7 +376,7 @@ p {
     border-radius: 5px;
     color: #191919;
     font-weight: 600;
-    margin: 0.5rem 0.1rem;
+    margin: 0.1rem;
     background-color: #85cb6f;
 }
 .content-section .tag-sm {
