Updated resume, updated cards component, added fixed class to work cards that are smaller than the first

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -542,6 +542,9 @@ p {
 .card-list article img {
     max-width: 100%;
 }
+.card-list article img.fixed {
+    height: 11em;
+}
 .content-txt {
     padding: 0.5rem;
 }
